<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioDeSesion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.029"
            tools:layout_editor_absoluteX="95dp" />

        <TextView
            android:id="@+id/tvInicioDeSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tvInicioDeSesion"
            android:textAlignment="center"
            android:textSize="40dp" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/etCorreo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/etContraseña"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/iniciarSesion"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFEB3B"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/iniciarSesion" />

        <TextView
            android:id="@+id/tvIS1"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/tvIS1"
            android:textSize="20dp" />

        <Button
            android:id="@+id/registrate"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFEB3B"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:text="@string/registrate" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>